16-September-2013:
=================
! BREAKING CHANGE: Removed ByteBuffer as type for Binary. Added byte[] as only type for Binary in both dynamic and typed interface.

10-September-2013:
==================
- Deprecated ReadTransaction.close()
+ WriteTransaction.commit() now throws IllegalStateException

09-September-2013:
==================
+ Added Table.toString(), Table.toString(maxRows), Table.rowToString(row)
+ Added TableView.toString(), TableView.toString(maxRows), TableView.rowToString(row)
+ Added Group.toString(), toJson(), equals()
+ Added Mixed.getReadableValue()
+ Added SharedGroup.hasChanged()
+ Added validation of parameters in all methods. Exceptions are now thrown if invalid parameters are passed. 

06-September-2013:
=================
! BUGFIX: Fixed small leak in TableQuery.

04-September-2013
===============
+ Added TableQuery.equal for Date
+ Added TableQuery.eq for Date
+ Added TableQuery.notEqual for Date
+ Added TableQuery.neq for Date
+ Added TableQuery.greaterThan for Date
+ Added TableQuery.gt for Date
+ Added TableQuery.greaterThanOrEqual for Date
+ Added TableQuery.gte for Date
+ Added TableQuery.lessThan for Date
+ Added TableQuery.lt for Date
+ Added TableQuery.lessThanOrEqual for Date
+ Added TableQuery.lte for Date
+ Added TableQuery.between for Date

02-September-2013
===============
! BREAKING CHANGE: ColumnType constants have been renamed, e.g ColumnTypeString is now called STRING etc.
! BREAKING CHANGE: All insert() methods in Table class working on just 1 column have been hidden from the developer

13-August-2013:
===============
+ Table.add() now returns row index of the added row.
! BREAKING CHANGE: Group() now takes a new OpenMode parameter and not a boolean. 
  It now supports multiple ways to open a group. (ReadOnly, ReadWrite, WriteNoCreate)
+ Added Group.commit()
+ Added Group.equals()

04-August-2013:
===============