@@ -460,8 +460,8 @@ public class TableQuery {
 
     // Integer aggregation
 
-    public long sum(long columnIndex, long start, long end){
-        return nativeSum(nativePtr, columnIndex, start, end, Table.INFINITE);
+    public long sum(long columnIndex, long start, long end, long limit){
+        return nativeSum(nativePtr, columnIndex, start, end, limit);
     }
     public long sum(long columnIndex){
         return nativeSum(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -469,8 +469,8 @@ public class TableQuery {
     protected native long nativeSum(long nativeQueryPtr, long columnIndex, long start, long end, long limit);
 
 
-    public long maximum(long columnIndex, long start, long end){
-        return nativeMaximum(nativePtr, columnIndex, start, end,  Table.INFINITE);
+    public long maximum(long columnIndex, long start, long end, long limit){
+        return nativeMaximum(nativePtr, columnIndex, start, end, limit);
     }
     public long maximum(long columnIndex){
         return nativeMaximum(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -478,8 +478,8 @@ public class TableQuery {
     protected native long nativeMaximum(long nativeQueryPtr, long columnIndex, long start, long end, long limit);
 
 
-    public long minimum(long columnIndex, long start, long end){
-        return nativeMinimum(nativePtr, columnIndex, start, end, Table.INFINITE);
+    public long minimum(long columnIndex, long start, long end, long limit){
+        return nativeMinimum(nativePtr, columnIndex, start, end, limit);
     }
     public long minimum(long columnIndex){
         return nativeMinimum(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -487,8 +487,8 @@ public class TableQuery {
     protected native long nativeMinimum(long nativeQueryPtr, long columnIndex, long start, long end, long limit);
 
 
-    public double average(long columnIndex, long start, long end){
-        return nativeAverage(nativePtr, columnIndex, start, end, Table.INFINITE);
+    public double average(long columnIndex, long start, long end, long limit){
+        return nativeAverage(nativePtr, columnIndex, start, end, limit);
     }
     public double average(long columnIndex){
         return nativeAverage(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -498,8 +498,8 @@ public class TableQuery {
 
     // float aggregation
 
-    public double sumFloat(long columnIndex, long start, long end){
-        return nativeSumFloat(nativePtr, columnIndex, start, end, Table.INFINITE);
+    public double sumFloat(long columnIndex, long start, long end, long limit){
+        return nativeSumFloat(nativePtr, columnIndex, start, end, limit);
     }
     public double sumFloat(long columnIndex){
         return nativeSumFloat(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -507,8 +507,8 @@ public class TableQuery {
     protected native double nativeSumFloat(long nativeQueryPtr, long columnIndex, long start, long end, long limit);
 
 
-    public float maximumFloat(long columnIndex, long start, long end){
-        return nativeMaximumFloat(nativePtr, columnIndex, start, end,  Table.INFINITE);
+    public float maximumFloat(long columnIndex, long start, long end, long limit){
+        return nativeMaximumFloat(nativePtr, columnIndex, start, end, limit);
     }
     public float maximumFloat(long columnIndex){
         return nativeMaximumFloat(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -516,8 +516,8 @@ public class TableQuery {
     protected native float nativeMaximumFloat(long nativeQueryPtr, long columnIndex, long start, long end, long limit);
 
 
-    public float minimumFloat(long columnIndex, long start, long end){
-        return nativeMinimumFloat(nativePtr, columnIndex, start, end, Table.INFINITE);
+    public float minimumFloat(long columnIndex, long start, long end, long limit){
+        return nativeMinimumFloat(nativePtr, columnIndex, start, end, limit);
     }
     public float minimumFloat(long columnIndex){
         return nativeMinimumFloat(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -525,8 +525,8 @@ public class TableQuery {
     protected native float nativeMinimumFloat(long nativeQueryPtr, long columnIndex, long start, long end, long limit);
 
 
-    public double averageFloat(long columnIndex, long start, long end){
-        return nativeAverageFloat(nativePtr, columnIndex, start, end, Table.INFINITE);
+    public double averageFloat(long columnIndex, long start, long end, long limit){
+        return nativeAverageFloat(nativePtr, columnIndex, start, end, limit);
     }
     public double averageFloat(long columnIndex){
         return nativeAverageFloat(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -536,8 +536,8 @@ public class TableQuery {
 
     // double aggregation
 
-    public double sumDouble(long columnIndex, long start, long end){
-        return nativeSumDouble(nativePtr, columnIndex, start, end, Table.INFINITE);
+    public double sumDouble(long columnIndex, long start, long end, long limit){
+        return nativeSumDouble(nativePtr, columnIndex, start, end, limit);
     }
     public double sumDouble(long columnIndex){
         return nativeSumDouble(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -545,8 +545,8 @@ public class TableQuery {
     protected native double nativeSumDouble(long nativeQueryPtr, long columnIndex, long start, long end, long limit);
 
 
-    public double maximumDouble(long columnIndex, long start, long end){
-        return nativeMaximumDouble(nativePtr, columnIndex, start, end,  Table.INFINITE);
+    public double maximumDouble(long columnIndex, long start, long end, long limit){
+        return nativeMaximumDouble(nativePtr, columnIndex, start, end, limit);
     }
     public double maximumDouble(long columnIndex){
         return nativeMaximumDouble(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -554,8 +554,8 @@ public class TableQuery {
     protected native double nativeMaximumDouble(long nativeQueryPtr, long columnIndex, long start, long end, long limit);
 
 
-    public double minimumDouble(long columnIndex, long start, long end){
-        return nativeMinimumDouble(nativePtr, columnIndex, start, end, Table.INFINITE);
+    public double minimumDouble(long columnIndex, long start, long end, long limit){
+        return nativeMinimumDouble(nativePtr, columnIndex, start, end, limit);
     }
     public double minimumDouble(long columnIndex){
         return nativeMinimumDouble(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -563,8 +563,8 @@ public class TableQuery {
     protected native double nativeMinimumDouble(long nativeQueryPtr, long columnIndex, long start, long end, long limit);
 
 
-    public double averageDouble(long columnIndex, long start, long end){
-        return nativeAverageDouble(nativePtr, columnIndex, start, end, Table.INFINITE);
+    public double averageDouble(long columnIndex, long start, long end, long limit){
+        return nativeAverageDouble(nativePtr, columnIndex, start, end, limit);
     }
     public double averageDouble(long columnIndex){
         return nativeAverageDouble(nativePtr, columnIndex, 0, Table.INFINITE, Table.INFINITE);
@@ -574,8 +574,8 @@ public class TableQuery {
     // count
 
     // TODO: Rename all start, end parameter names to firstRow, lastRow
-    public long count(long start, long end){
-        return nativeCount(nativePtr, start, end, Table.INFINITE);
+    public long count(long start, long end, long limit){
+        return nativeCount(nativePtr, start, end, limit);
     }
     public long count(){
         return nativeCount(nativePtr, 0, Table.INFINITE, Table.INFINITE);
