@@ -2,6 +2,7 @@ package com.tightdb.typed;
 
 import static org.testng.AssertJUnit.assertEquals;
 
+import com.tightdb.Table;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
@@ -71,47 +72,47 @@ public class NumbersTest {
     @Test
     public void shouldAggregateFloats() {
         assertEquals(10000.1f, numbers.floatNum.minimum());
-        assertEquals(10000.1f, numbers.floatNum.minimum(0, 1)); // first
-        assertEquals(30000.6f, numbers.floatNum.minimum(1, 2)); // second
-        assertEquals(10000.1f, numbers.floatNum.minimum(0, 2)); // 1st & 2nd
+        assertEquals(10000.1f, numbers.floatNum.minimum(0, 1, Table.INFINITE)); // first
+        assertEquals(30000.6f, numbers.floatNum.minimum(1, 2, Table.INFINITE)); // second
+        assertEquals(10000.1f, numbers.floatNum.minimum(0, 2, Table.INFINITE)); // 1st & 2nd
 
         assertEquals(30000.6f, numbers.floatNum.maximum());
-        assertEquals(10000.1f, numbers.floatNum.maximum(0, 1)); // first
-        assertEquals(30000.6f, numbers.floatNum.maximum(1, 2)); // second
-        assertEquals(30000.6f, numbers.floatNum.maximum(0, 2)); // 1st & 2nd
+        assertEquals(10000.1f, numbers.floatNum.maximum(0, 1, Table.INFINITE)); // first
+        assertEquals(30000.6f, numbers.floatNum.maximum(1, 2, Table.INFINITE)); // second
+        assertEquals(30000.6f, numbers.floatNum.maximum(0, 2, Table.INFINITE)); // 1st & 2nd
 
         assertEquals(50000.8d, numbers.floatNum.sum(), 0.01);
-        assertEquals(10000.1d, numbers.floatNum.sum(0, 1), 0.01); // first
-        assertEquals(30000.6d, numbers.floatNum.sum(1, 2), 0.01); // second
-        assertEquals(40000.7d, numbers.floatNum.sum(0, 2), 0.01); // 1st & 2nd
+        assertEquals(10000.1d, numbers.floatNum.sum(0, 1, Table.INFINITE), 0.01); // first
+        assertEquals(30000.6d, numbers.floatNum.sum(1, 2, Table.INFINITE), 0.01); // second
+        assertEquals(40000.7d, numbers.floatNum.sum(0, 2, Table.INFINITE), 0.01); // 1st & 2nd
 
         assertEquals(50000.8d/3, numbers.floatNum.average(), 0.01);
-        assertEquals(30000.6d, numbers.floatNum.average(1, 2), 0.01); // second
-        assertEquals(40000.7d/2, numbers.floatNum.average(0, 2), 0.01); // 1st & 2nd
-        assertEquals(10000.1d, numbers.floatNum.average(0, 1), 0.01); // first
+        assertEquals(30000.6d, numbers.floatNum.average(1, 2, Table.INFINITE), 0.01); // second
+        assertEquals(40000.7d/2, numbers.floatNum.average(0, 2, Table.INFINITE), 0.01); // 1st & 2nd
+        assertEquals(10000.1d, numbers.floatNum.average(0, 1, Table.INFINITE), 0.01); // first
     }
 
     @Test
     public void shouldAggregateDoubles() {
         assertEquals(10000.1d, numbers.doubleNum.minimum());
-        assertEquals(10000.1d, numbers.doubleNum.minimum(0, 1)); // first
-        assertEquals(30000.6d, numbers.doubleNum.minimum(1, 2)); // second
-        assertEquals(10000.1d, numbers.doubleNum.minimum(0, 2)); // 1st & 2nd
+        assertEquals(10000.1d, numbers.doubleNum.minimum(0, 1, Table.INFINITE)); // first
+        assertEquals(30000.6d, numbers.doubleNum.minimum(1, 2, Table.INFINITE)); // second
+        assertEquals(10000.1d, numbers.doubleNum.minimum(0, 2, Table.INFINITE)); // 1st & 2nd
 
         assertEquals(30000.6d, numbers.doubleNum.maximum());
-        assertEquals(10000.1d, numbers.doubleNum.maximum(0, 1)); // first
-        assertEquals(30000.6d, numbers.doubleNum.maximum(1, 2)); // second
-        assertEquals(30000.6d, numbers.doubleNum.maximum(0, 2)); // 1st & 2nd
+        assertEquals(10000.1d, numbers.doubleNum.maximum(0, 1, Table.INFINITE)); // first
+        assertEquals(30000.6d, numbers.doubleNum.maximum(1, 2, Table.INFINITE)); // second
+        assertEquals(30000.6d, numbers.doubleNum.maximum(0, 2, Table.INFINITE)); // 1st & 2nd
 
         assertEquals(50000.8d, numbers.doubleNum.sum(), 0.01);
-        assertEquals(10000.1d, numbers.doubleNum.sum(0, 1)); // first
-        assertEquals(30000.6d, numbers.doubleNum.sum(1, 2)); // second
-        assertEquals(40000.7d, numbers.doubleNum.sum(0, 2)); // 1st & 2nd
+        assertEquals(10000.1d, numbers.doubleNum.sum(0, 1, Table.INFINITE)); // first
+        assertEquals(30000.6d, numbers.doubleNum.sum(1, 2, Table.INFINITE)); // second
+        assertEquals(40000.7d, numbers.doubleNum.sum(0, 2, Table.INFINITE)); // 1st & 2nd
 
         assertEquals(50000.8d/3, numbers.doubleNum.average(), 0.01);
-        assertEquals(30000.6d, numbers.doubleNum.average(1, 2)); // second
-        assertEquals(40000.7d/2, numbers.doubleNum.average(0, 2)); // 1st & 2nd
-        assertEquals(10000.1d, numbers.doubleNum.average(0, 1)); // first
+        assertEquals(30000.6d, numbers.doubleNum.average(1, 2, Table.INFINITE)); // second
+        assertEquals(40000.7d/2, numbers.doubleNum.average(0, 2, Table.INFINITE)); // 1st & 2nd
+        assertEquals(10000.1d, numbers.doubleNum.average(0, 1, Table.INFINITE)); // first
     }
 
 }
